# metin2-bot-project

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  LICENSE.txt  Metin2Bot.sln  Metin2Bot.vcxproj  Metin2Bot.vcxproj.filters  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
Metin2Bot/x64/Debug/: vc143.idb
Metin2Bot/x64/Debug/Metin2Bot.tlog/: CL.command.1.tlog  Metin2Bot.lastbuildstate
ext/detours/lib/: detours.lib  syelog.lib
ext/directx/Include/: xnamathconvert.inl
ext/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imstb_truetype.h
src/: GameSignatures.h  PatternScanner.cpp  PatternScanner.h  cheatVars.h  classPointers.cpp  classPointers.h  customMap.h  data.h  dllFunctions.cpp  dllFunctions.h  dllmain.cpp  entity.h  gameFunctions.cpp  gameFunctions.h  gamePointers.cpp  gamePointers.h  gui.cpp  gui.h  hook.cpp  hook.h  init.cpp  init.h  main.cpp  patch.cpp  patch.h  pointers.cpp  pointers.h  scanner.cpp  scanner.h  signature.h  singleton.h  utils.h
