cmake_minimum_required(VERSION 3.28)
project(Metin2Bot)

set(CMAKE_CXX_STANDARD 20)


add_library(Metin2Bot SHARED
        src/main.cpp
        src/singleton.h
        src/signature.h
        src/scanner.h
        src/scanner.cpp
        src/classPointers.h
        src/classPointers.cpp
        src/init.h
        src/entity.h
        src/gameFunctions.cpp
        src/gameFunctions.h
        src/gui.cpp
        src/gui.h
        src/hook.cpp
        src/hook.h
        src/init.cpp
        src/data.h
        src/dllFunctions.cpp
        src/dllFunctions.h
        ext/imgui/imconfig.h
        ext/imgui/imgui.cpp
        ext/imgui/imgui.h
        ext/imgui/imgui_demo.cpp
        ext/imgui/imgui_draw.cpp
        ext/imgui/imgui_impl_dx9.cpp
        ext/imgui/imgui_impl_dx9.h
        ext/imgui/imgui_impl_win32.cpp
        ext/imgui/imgui_impl_win32.h
        ext/imgui/imgui_internal.h
        ext/imgui/imgui_tables.cpp
        ext/imgui/imgui_widgets.cpp
        ext/imgui/imstb_rectpack.h
        ext/imgui/imstb_textedit.h
        ext/imgui/imstb_truetype.h
        ext/directx/Include/audiodefs.h
        ext/directx/Include/comdecl.h
        ext/directx/Include/D2D1.h
        ext/directx/Include/D2D1Helper.h
        ext/directx/Include/D2DBaseTypes.h
        ext/directx/Include/D2Derr.h
        ext/directx/Include/d3d9.h
        ext/directx/Include/d3d9caps.h
        ext/directx/Include/d3d9types.h
        ext/directx/Include/D3D10.h
        ext/directx/Include/D3D10_1.h
        ext/directx/Include/D3D10_1shader.h
        ext/directx/Include/D3D10effect.h
        ext/directx/Include/d3d10misc.h
        ext/directx/Include/d3d10sdklayers.h
        ext/directx/Include/D3D10shader.h
        ext/directx/Include/D3D11.h
        ext/directx/Include/D3D11SDKLayers.h
        ext/directx/Include/D3D11Shader.h
        ext/directx/Include/D3Dcommon.h
        ext/directx/Include/D3Dcompiler.h
        ext/directx/Include/D3DCSX.h
        ext/directx/Include/d3dx9.h
        ext/directx/Include/d3dx9anim.h
        ext/directx/Include/d3dx9core.h
        ext/directx/Include/d3dx9effect.h
        ext/directx/Include/d3dx9math.h
        ext/directx/Include/d3dx9math.inl
        ext/directx/Include/d3dx9mesh.h
        ext/directx/Include/d3dx9shader.h
        ext/directx/Include/d3dx9shape.h
        ext/directx/Include/d3dx9tex.h
        ext/directx/Include/d3dx9xof.h
        ext/directx/Include/D3DX10.h
        ext/directx/Include/d3dx10async.h
        ext/directx/Include/D3DX10core.h
        ext/directx/Include/D3DX10math.h
        ext/directx/Include/D3DX10math.inl
        ext/directx/Include/D3DX10mesh.h
        ext/directx/Include/D3DX10tex.h
        ext/directx/Include/D3DX11.h
        ext/directx/Include/D3DX11async.h
        ext/directx/Include/D3DX11core.h
        ext/directx/Include/D3DX11tex.h
        ext/directx/Include/D3DX_DXGIFormatConvert.inl
        ext/directx/Include/Dcommon.h
        ext/directx/Include/dinput.h
        ext/directx/Include/dinputd.h
        ext/directx/Include/dsconf.h
        ext/directx/Include/dsetup.h
        ext/directx/Include/dsound.h
        ext/directx/Include/DWrite.h
        ext/directx/Include/dxdiag.h
        ext/directx/Include/DxErr.h
        ext/directx/Include/dxfile.h
        ext/directx/Include/DXGI.h
        ext/directx/Include/DXGIFormat.h
        ext/directx/Include/DXGIType.h
        ext/directx/Include/dxsdkver.h
        ext/directx/Include/gameux.h
        ext/directx/Include/PIXPlugin.h
        ext/directx/Include/rmxfguid.h
        ext/directx/Include/rmxftmpl.h
        ext/directx/Include/rpcsal.h
        ext/directx/Include/X3DAudio.h
        ext/directx/Include/xact3.h
        ext/directx/Include/xact3d3.h
        ext/directx/Include/xact3wb.h
        ext/directx/Include/XAPO.h
        ext/directx/Include/XAPOBase.h
        ext/directx/Include/XAPOFX.h
        ext/directx/Include/XAudio2.h
        ext/directx/Include/XAudio2fx.h
        ext/directx/Include/XDSP.h
        ext/directx/Include/XInput.h
        ext/directx/Include/xma2defs.h
        ext/directx/Include/xnamath.h
        ext/directx/Include/xnamathconvert.inl
        ext/directx/Include/xnamathmatrix.inl
        ext/directx/Include/xnamathmisc.inl
        ext/directx/Include/xnamathvector.inl
        ext/detours/detours.h
        ext/detours/detver.h
        ext/detours/syelog.h
)


target_link_libraries(Metin2Bot
        ${CMAKE_SOURCE_DIR}/ext/detours/lib/detours.lib
        ${CMAKE_SOURCE_DIR}/ext/directx/lib/x86/d3dx9.lib
        ${CMAKE_SOURCE_DIR}/ext/directx/lib/x86/d3d9.lib
        ${CMAKE_SOURCE_DIR}/ext/directx/lib/x86/dinput8.lib
        ${CMAKE_SOURCE_DIR}/ext/directx/lib/x86/dxguid.lib

)